kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zimvisit-ingress
  namespace: zimvisit
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.zimvisit.co.zw
    - admin.zimvisit.co.zw
    - gov.zimvisit.co.zw
    secretName: zimvisit-tls
  rules:
  - host: api.zimvisit.co.zw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zimvisit-api
            port:
              number: 3000
  - host: admin.zimvisit.co.zw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: operator-dashboard
            port:
              number: 3001
  - host: gov.zimvisit.co.zw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: government-portal
            port:
              number: 3002
